[tool.poetry]
name = "text-summarization"
version = "0.1.0"
description = ""
authors = ["AlessSilva <alessandrosouza.eq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
